<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvMainHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complete_profile" />

    <Button
        android:id="@+id/btnBeginUserProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onButtonClick"
        android:text="@string/begin" />

    <Button
        android:id="@+id/btnRetrieveUserProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onButtonClick"
        android:text="@string/retrieve" />

    <TextView
        android:id="@+id/tvFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name" />

    <TextView
        android:id="@+id/tvBirthDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birth_date" />

    <TextView
        android:id="@+id/tvStreetAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/street_address" />

    <TextView
        android:id="@+id/tvCitySTZip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city_state_zip" />

</LinearLayout>